cmake_minimum_required(VERSION 3.16)
project(practice_examples)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

add_executable(chp01-ex01 src/chp01-Basics/ex01-hello.cpp)
add_executable(chp01-ex02 src/chp01-Basics/ex02-primitives.cpp)
add_executable(chp01-ex03 src/chp01-Basics/ex03-add_2_ints.cpp)
add_executable(chp01-ex04 src/chp01-Basics/ex04-fahrenheit_to_celsius.cpp)
add_executable(chp01-ex05 src/chp01-Basics/ex05-circle_area.cpp)
add_executable(chp01-ex06 src/chp01-Basics/ex06-assignments.cpp)
add_executable(chp01-ex07 src/chp01-Basics/ex07-increment.cpp)
add_executable(chp02-ex01 src/chp02-Loops_and_decisions/ex01-factorial_while.cpp)
add_executable(chp02-ex02 src/chp02-Loops_and_decisions/ex02-is_even.cpp)
add_executable(chp02-ex03 src/chp02-Loops_and_decisions/ex03-maximum.cpp)
add_executable(chp02-ex04 src/chp02-Loops_and_decisions/ex04-day_of_week.cpp)
add_executable(chp02-ex05 src/chp02-Loops_and_decisions/ex05-day_of_week_using_switch.cpp)
add_executable(chp02-ex06 src/chp02-Loops_and_decisions/ex06-is_prime.cpp)
add_executable(chp02-ex07 src/chp02-Loops_and_decisions/ex07-adding_numbers.cpp)
add_executable(chp03-ex01 src/chp03-Functions/ex01-print_stars.cpp)
add_executable(chp03-ex02 src/chp03-Functions/ex02-lbs2kgs.cpp)
add_executable(chp03-ex03 src/chp03-Functions/ex03-increment_by_2.cpp)
add_executable(chp03-ex04 src/chp03-Functions/ex04-swap_values.cpp)
add_executable(chp03-ex05 src/chp03-Functions/ex05-circle_area_and_perimeter.cpp)
add_executable(chp03-ex06 src/chp03-Functions/ex06-line_numbers.cpp)
add_executable(chp03-ex07 src/chp03-Functions/ex07-factorial_recursive.cpp)
add_executable(chp03-ex08 src/chp03-Functions/ex08-logarithm.cpp)
add_executable(chp04-ex01 src/chp04-Structures_and_enumerations/ex01-date.cpp)
add_executable(chp04-ex02 src/chp04-Structures_and_enumerations/ex02-day_of_week.cpp)
add_executable(chp04-ex02_scoped src/chp04-Structures_and_enumerations/ex02-day_of_week_scoped.cpp)
add_executable(chp05-ex01 src/chp05-Arrays_and_strings/ex01-rooms.cpp)
add_executable(chp05-ex02 src/chp05-Arrays_and_strings/ex02-array.cpp)
add_executable(chp05-ex03 src/chp05-Arrays_and_strings/ex03-vector.cpp)
add_executable(chp05-ex04 src/chp05-Arrays_and_strings/ex04-characters.cpp)
add_executable(chp05-ex05_noblanks src/chp05-Arrays_and_strings/ex05-enter_quote_noblanks.cpp)
add_executable(chp05-ex05 src/chp05-Arrays_and_strings/ex05-enter_quote_with_blanks.cpp)
add_executable(chp05-ex06 src/chp05-Arrays_and_strings/ex06-copy_c_string.cpp)
add_executable(chp05-ex06_2 src/chp05-Arrays_and_strings/ex06-copy_c_string_2.cpp)
add_executable(chp05-ex07 src/chp05-Arrays_and_strings/ex07-c_array_of_days.cpp)
add_executable(chp05-ex08 src/chp05-Arrays_and_strings/ex08-read_text_lines.cpp)
add_executable(chp05-ex09 src/chp05-Arrays_and_strings/ex09-cpp_string.cpp)
add_executable(chp05-ex10 src/chp05-Arrays_and_strings/ex10-coin_toss.cpp)
add_executable(chp06-ex01 src/chp06-Pointers/ex01-address_of_var.cpp)
add_executable(chp06-ex02 src/chp06-Pointers/ex02-dereference_ptr.cpp)
add_executable(chp06-ex03 src/chp06-Pointers/ex03-ptr_assignment.cpp)
add_executable(chp06-ex04 src/chp06-Pointers/ex04-array_as_ptr.cpp)
add_executable(chp06-ex05 src/chp06-Pointers/ex05-centimize.cpp)
add_executable(chp06-ex06 src/chp06-Pointers/ex06-passing_c_arrays.cpp)
add_executable(chp06-ex07 src/chp06-Pointers/ex07-c_string_as_ptr.cpp)
add_executable(chp06-ex08 src/chp06-Pointers/ex08-copy_c_string.cpp)
add_executable(chp06-ex09 src/chp06-Pointers/ex09-c_string_array.cpp)
add_executable(chp06-ex10 src/chp06-Pointers/ex10-new_operator.cpp)
add_executable(chp06-ex10_2 src/chp06-Pointers/ex10-new_operator_2.cpp)
add_executable(chp06-ex11 src/chp06-Pointers/ex11-struct_ptr.cpp)
add_executable(chp06-ex11_2 src/chp06-Pointers/ex11-struct_ptr_2.cpp)
add_executable(chp07-ex01 src/chp07-Classes_and_objects/ex01-simple_class.cpp)
add_executable(chp07-ex02 src/chp07-Classes_and_objects/ex02-some_class.cpp)
add_executable(chp07-ex03 src/chp07-Classes_and_objects/ex03-some_struct.cpp)
add_executable(chp07-ex04 src/chp07-Classes_and_objects/ex04-date.cpp)
add_executable(chp07-ex04_2 src/chp07-Classes_and_objects/ex04-date_2.cpp)
add_executable(chp07-ex05 src/chp07-Classes_and_objects/ex05-counter.cpp)
add_executable(chp07-ex06 src/chp07-Classes_and_objects/ex06-distance.cpp)
add_executable(chp08-ex01 src/chp08-Inheritance/ex01-distance.cpp)
add_executable(chp08-ex02 src/chp08-Inheritance/ex02-draw.cpp)
add_executable(chp08-ex03 src/chp08-Inheritance/ex03-counter.cpp)
add_executable(chp08-ex05 src/chp08-Inheritance/ex05-overriding_functions.cpp)
add_executable(chp08-ex05_2 src/chp08-Inheritance/ex05-overriding_functions_2.cpp)
add_executable(chp08-ex06 src/chp08-Inheritance/ex06-publication.cpp src/chp08-Inheritance/ex06-audio.cpp src/chp08-Inheritance/ex06-book.cpp src/chp08-Inheritance/ex06-main.cpp)
add_executable(chp09-ex01 src/chp09-Operator_overloading/ex01-distance.cpp)
add_executable(chp09-ex02 src/chp09-Operator_overloading/ex02-stack.cpp)
add_executable(chp09-ex03 src/chp09-Operator_overloading/ex03-point.cpp)
add_executable(chp09-ex04 src/chp09-Operator_overloading/ex04-counter.cpp)
add_executable(chp09-ex05 src/chp09-Operator_overloading/ex05-complex.cpp)
#add_executable(chp10-ex01 src/chp10-Virtual_functions/ex01-diamond_problem.cpp)
add_executable(chp10-ex02 src/chp10-Virtual_functions/ex02-diamond_problem_nonvirtual_sol.cpp)
add_executable(chp10-ex03 src/chp10-Virtual_functions/ex03-diamond_problem_virtual_sol.cpp)
add_executable(chp10-ex04 src/chp10-Virtual_functions/ex04-early_binding.cpp)
add_executable(chp10-ex05 src/chp10-Virtual_functions/ex05-late_binding.cpp)
add_executable(chp10-ex06 src/chp10-Virtual_functions/ex06-virtual_and_inheritance.cpp)
add_executable(chp10-ex07 src/chp10-Virtual_functions/ex07-virtual_destructors.cpp)
add_executable(chp10-ex08 src/chp10-Virtual_functions/ex08-shapes.cpp)
add_executable(chp11-ex01 src/chp11-Streams_and_files/ex01-hello.cpp)
add_executable(chp11-ex02 src/chp11-Streams_and_files/ex02-hello_append.cpp)
add_executable(chp11-ex03 src/chp11-Streams_and_files/ex03-numbers.cpp)
add_executable(chp11-ex04 src/chp11-Streams_and_files/ex04-numbers_error_checked.cpp)
add_executable(chp11-ex06 src/chp11-Streams_and_files/ex06-flags.cpp)
add_executable(chp11-ex07 src/chp11-Streams_and_files/ex07-site_generator.cpp)
add_executable(chp11-ex08 src/chp11-Streams_and_files/ex08-maps.cpp)
add_executable(chp11-ex09 src/chp11-Streams_and_files/ex09-word_counter.cpp)
add_executable(chp11-ex10 src/chp11-Streams_and_files/ex10-binary_files.cpp)
add_executable(chp11-ex11 src/chp11-Streams_and_files/ex11-accounts.cpp)
add_executable(chp12-ex01 src/chp12-Exceptions_and_templates/ex01-exceptions.cpp)
add_executable(chp12-ex02 src/chp12-Exceptions_and_templates/ex02-divide-v1.cpp)
add_executable(chp12-ex03 src/chp12-Exceptions_and_templates/ex03-divide-v2.cpp)
add_executable(chp12-ex04 src/chp12-Exceptions_and_templates/ex04-divide-v3.cpp)
add_executable(chp12-ex05 src/chp12-Exceptions_and_templates/ex05-not-found.cpp)
add_executable(chp12-ex06 src/chp12-Exceptions_and_templates/ex06-io-failure.cpp)
add_executable(chp12-ex07 src/chp12-Exceptions_and_templates/ex07-function_no_templates_2.cpp)
add_executable(chp12-ex08 src/chp12-Exceptions_and_templates/ex08-function_template.cpp)
add_executable(chp12-ex09 src/chp12-Exceptions_and_templates/ex09-find_function.cpp)
add_executable(chp12-ex10 src/chp12-Exceptions_and_templates/ex10-class_templates.cpp)
add_executable(chp12-ex10_2 src/chp12-Exceptions_and_templates/ex10-class_templates_2.cpp)
add_executable(chp12-ex11 src/chp12-Exceptions_and_templates/ex11-passing_cpp_arrays.cpp)
add_executable(chp13-ex01 src/chp13/ex01-addition.cpp src/chp13/ex01-main.cpp)

